# FLEX

./: BUILD.bazel
Classes/: FLEX-ObjectExploring.h  FLEX.h
Classes/Core/Controllers/: FLEXNavigationController.m
Classes/Editing/: FLEXMethodCallingViewController.m  FLEXVariableEditorViewController.m
Classes/ExplorerInterface/: FLEXExplorerViewController.h  FLEXExplorerViewController.m  FLEXViewControllersViewController.m  FLEXWindowManagerController.m
Classes/ExplorerInterface/Bookmarks/: FLEXBookmarksViewController.m
Classes/GlobalStateExplorers/: FLEXAPNSViewController.h  FLEXAPNSViewController.m  FLEXAddressExplorerCoordinator.h  FLEXAddressExplorerCoordinator.m  FLEXCookiesViewController.h  FLEXCookiesViewController.m  FLEXLiveObjectsController.h  FLEXObjectListViewController.m
Classes/GlobalStateExplorers/DatabaseBrowser/: FLEXSQLiteDatabaseManager.m  FLEXTableListViewController.m  FLEXTableRowDataViewController.m
Classes/GlobalStateExplorers/FileBrowser/: FLEXFileBrowserController.h  FLEXFileBrowserController.m
Classes/GlobalStateExplorers/Globals/: FLEXGlobalsEntry.m  (+2 more)
Classes/Manager/: FLEXManager+Extensibility.h  FLEXManager+Extensibility.m  FLEXManager+Networking.h  FLEXManager+Networking.m  FLEXManager.h  FLEXManager.m
Classes/Network/: FLEXNetworkMITMViewController.h  FLEXNetworkMITMViewController.m
Classes/ObjectExplorers/: FLEXObjectExplorer.m  FLEXObjectExplorerFactory.h  FLEXObjectExplorerFactory.m  FLEXObjectExplorerViewController.h  FLEXObjectExplorerViewController.m
Classes/Toolbar/: FLEXExplorerToolbar.m  FLEXExplorerToolbarItem.m
(+49 files in other folders)
